--- a/templates/application/dashboard.twig
+++ b/templates/application/dashboard.twig
@@ -84,8 +84,7 @@
 
         <li><a class="btn" href="{{ uriFor('build.history.page1', {'application': application.id}) }}">All Builds</a></li>
         <li><a class="btn" href="{{ uriFor('push.history.page1', {'application': application.id}) }}">All Pushes</a></li>
-
-        <li><a class="btn btn--secondary" href="{{ uriFor('application', {'application': application.id}) }}">Application</a></li>
+        <li><a class="btn" href="{{ uriFor('application', {'application': application.id}) }}">Manage Application</a></li>
     </ul>
 {% endblock %}
 
