modulize the select-all js

--- a/templates/macros.start-deploy.twig
+++ b/templates/macros.start-deploy.twig
@@ -51,7 +51,7 @@
                 <label class="neatbox mrn" for="sel-{{ deployment.id }}">
                     <input
                         type="checkbox"
-                        class="js-pushable-deployment"
+                        class="js-toggle-box"
                         name="deployments[]"
                         id="sel-{{ deployment.id }}"
                         value="{{ deployment.id }}"{{ isSelected ? ' checked' : '' }}>
