Move around some js

--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import _self as page_macros %}
 {% import "macros.twig" as macros %}
-{% set js_components = ["favorites", "collapsible", "apps.filter"] %}
+{% set js_components = ["applications.list"] %}
 
 {% set page_title = "Applications" %}
 
