--- a/templates/_partial-job/build-table.twig
+++ b/templates/_partial-job/build-table.twig
@@ -1,6 +1,6 @@
 {% import "macros.twig" as macros %}
 
-<table class="table--spacing-medium" data-tablesaw-mode="stack">
+<table class="table--spacing-medium">
     <thead>
         <tr>
             <th>Build</th>
