--- a/templates/_partial-job/pending-table.twig
+++ b/templates/_partial-job/pending-table.twig
@@ -1,6 +1,6 @@
 {% import "macros.twig" as macros %}
 
-<table id="js-queue" class="table--spacing-medium" data-tablesaw-mode="stack">
+<table id="js-queue" class="table--spacing-medium">
     <thead>
         <tr>
             <th>Type</th>
