--- a/templates/admin/audit-history.twig
+++ b/templates/admin/audit-history.twig
@@ -15,7 +15,7 @@
 
     {{ pagination.pagination(page, last, 'admin.audit_history', {}) }}
 
-    <table class="table--spacing-medium" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium">
         <thead>
             <tr>
                 <th>Time</th>
