--- a/templates/admin/super.cache-management.twig
+++ b/templates/admin/super.cache-management.twig
@@ -41,7 +41,7 @@
         <div class="details-box scrollable-box">
             {% if permissions %}
                 <div class="scrolly-container">
-                    <table class="table--spacing-small" data-tablesaw-mode="stack">
+                    <table class="table--spacing-small">
                         <thead>
                             <tr>
                                 <th class="t70">Key</th>
@@ -75,7 +75,7 @@
         <div class="details-box scrollable-box">
             {% if doctrine_cached %}
                 <div class="scrolly-container">
-                    <table class="table--spacing-small" data-tablesaw-mode="stack">
+                    <table class="table--spacing-small">
                         <thead>
                             <tr>
                                 <th>Key</th>
@@ -154,7 +154,7 @@
             <h4>Cached Scripts</h4>
             <div class="details-box scrollable-box">
                 <div class="scrolly-container">
-                    <table data-tablesaw-mode="stack">
+                    <table>
                         <thead>
                             <tr>
                                 <th class="t70">File</th>
