--- a/templates/encrypted-configuration/encrypted.configuration.twig
+++ b/templates/encrypted-configuration/encrypted.configuration.twig
@@ -21,7 +21,7 @@
     </p>
 
     {% if encrypteds %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th>Property Name</th>
