--- a/templates/environment/environment.twig
+++ b/templates/environment/environment.twig
@@ -19,7 +19,7 @@
 
     <h3>Servers</h3>
     {% if servers %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th>Name</th>
