--- a/templates/organization/organization.twig
+++ b/templates/organization/organization.twig
@@ -27,7 +27,7 @@
     <h4>Applications</h4>
     {% if applications %}
 
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th>Application</th>
