--- a/templates/permissions/permissions.twig
+++ b/templates/permissions/permissions.twig
@@ -28,7 +28,7 @@
 
     <h2 id="app-owners">Application Owners</h2>
     {% if owners %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th class="t20">Username</th>
@@ -67,7 +67,7 @@
 
     <h2 id="deploy">Deployment Permissions</h2>
     {% if deploy %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th class="t20">Username</th>
@@ -130,7 +130,7 @@
     {% import "macros.twig" as macros %}
 
     {% if users_by_type %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th class="t20">Username</th>
