--- a/templates/server/server.twig
+++ b/templates/server/server.twig
@@ -25,7 +25,7 @@
 
     <h3>Application Deployment Targets</h3>
     {% if deployments %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th>Application</th>
