--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -63,7 +63,7 @@
 
         {% if not user.tokens.isEmpty %}
 
-            <table class="table--spacing-medium" data-tablesaw-mode="stack">
+            <table class="table--spacing-medium">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -76,7 +76,7 @@
                             <td>{{ token.label }}</td>
                             <td class="tr">
                                 <a class="btn btn--tiny btn--destructive" href="{{ uriFor('user.token.remove', {'user': user.id, 'token': token.id}) }}">
-                                    Revoke <span class="tablesaw-collapse">Access Token</span>
+                                    Revoke
                                 </a>
                             </td>
                         </tr>
