--- a/templates/admin/super.system-status.twig
+++ b/templates/admin/super.system-status.twig
@@ -118,7 +118,7 @@
     <p>Last Update: {{ connections.generated|html5date }}</p>
 
     {% if connections.servers %}
-        <table class="table--spacing-medium table--striped table--top-aligned" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped table--top-aligned">
             <thead>
                 <tr>
                     <th>Status</th>
