--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -10,7 +10,7 @@
 
     {% if favorites %}
         <h2>Favorites</h2>
-        <table class="table--spacing-medium" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium">
             <thead>
                 <tr>
                     <th>Application</th>
@@ -42,7 +42,7 @@
 
 <input id="js-search-input" class="text-input" type="text" name="search" autocomplete="off" placeholder="Search for an application or repository..." maxlength="100">
 
-    <table class="table--spacing-medium js-collapsible js-search-table" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium js-collapsible js-search-table">
         <thead>
             <tr>
                 <th>Application</th>
