--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -60,7 +60,7 @@
 
     <h3>Application Deployments</h3>
     {% if targets %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th>Application</th>
