--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -17,7 +17,7 @@
     </p>
 
     {% if credentials %}
-        <table class="table--spacing-medium table--striped table--top-aligned" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped table--top-aligned">
             <thead>
                 <tr class="tl">
                     <th>ID</th>
