--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -7,7 +7,7 @@
     <h1>{{ page_title }}</h1>
 
     {% if envs %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th>Name</th>
