--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -52,7 +52,7 @@
     {% set canRollback = canUserPush(current_user, application, deployment.server.environment) %}
 
     <h2>Release History</h2>
-    <table class="table--spacing-medium" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium">
         <thead>
             <tr>
                 <th>Build</th>
