--- a/templates/server/servers.twig
+++ b/templates/server/servers.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>{{ page_title }}</h1>
 
-    <table class="table--spacing-medium table--top-aligned" data-tablesaw-mode="stack">
+    <table class="table--spacing-medium table--top-aligned">
         <thead>
             <tr class="tl">
                 <th>Environment</th>
