--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -24,7 +24,7 @@
     {% import "macros.twig" as macros %}
 
     {% if users %}
-        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+        <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
                     <th>User ID</th>
